# banco_imobiliario_simulador

./: README.md  pyproject.toml
banco_imobiliario/: config.py  main.py  models.py
tests/: test_banco_imobiliario.py  test_configuracao.py
