[tool.poetry]
name = "banco_imobiliario"
version = "0.1.0"
description = ""
authors = ["Delatorrea <emerson@delatorre.dev>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.7"

[tool.poetry.scripts]
my-script = "banco_imobiliario.main:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
